<resources>
    <string name="app_name">Yahve</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="msg_privacy_terms">I have read and agree to the Privacy Policy and Terms &amp; Conditions.</string>
    <string name="jan">Jan</string>
    <string name="feb">Frb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="album_title">Media Album</string>
    <string name="album_all_images">All Images</string>
    <string name="album_all_videos">All Videos</string>
    <string name="album_all_images_videos">All Images/Videos</string>
    <string name="album_ok">OK</string>
    <string name="album_confirm">Confirm</string>
    <string name="album_cancel">Cancel</string>
    <string name="no_selected">Please select, first.</string>
    <string name="album_menu_finish">Finish</string>
    <string name="album_check">Selected</string>
    <string name="album_item_unavailable">Unavailable</string>
    <string name="album_take_file_unavailable">Unavailable file, please try again.</string>
    <string name="album_converting">Loading&#8230;</string>
    <string name="album_thumbnail">Generating thumbnails&#8230;</string>
    <string name="album_check_image_little">Please select a image item.</string>
    <string name="album_check_video_little">Please select a video item.</string>
    <string name="album_check_album_little">Please select a media item.</string>
    <plurals name="album_check_album_limit">
        <item quantity="one">You can only select %1$d media item.</item>
        <item quantity="other">You can only select %1$d media items.</item>
    </plurals>
    <plurals name="album_check_video_limit">
        <item quantity="one">You can only select %1$d video.</item>
        <item quantity="other">You can only select %1$d videos.</item>
    </plurals>
    <plurals name="album_check_image_limit">
        <item quantity="one">You can only select %1$d image item.</item>
        <item quantity="other">You can only select %1$d image items.</item>
    </plurals>
    <string name="album_loading">Loading&#8230;</string>
    <string name="album_title_permission_failed">Permission denied</string>
    <string name="album_permission_storage_failed_hint">No storage permission, please authorize before use.</string>
    <string name="album_permission_camera_image_failed_hint">No Camera permission or Storage permission, please authorize before use.</string>
    <string name="album_permission_camera_video_failed_hint">No Camera permission, Storage permission or Microphone permission, please authorize it before use.</string>
    <string name="album_camera_image_capture">Take Picture</string>
    <string name="album_not_found_image">No image items found</string>
    <string name="album_not_found_album">No media items found</string>
    <plurals name="album_check_image_limit_camera">
        <item quantity="one">You can only select %1$d image item, can\'t use camera.</item>
        <item quantity="other">You can only select %1$d image items, can\'t use camera.</item>
    </plurals>
    <plurals name="album_check_video_limit_camera">
        <item quantity="one">You can only select %1$d video item, can\'t use camera.</item>
        <item quantity="other">You can only select %1$d video items, can\'t use camera.</item>
    </plurals>
    <plurals name="album_check_album_limit_camera">
        <item quantity="one">You can only select %1$d media item, can\'t use camera.</item>
        <item quantity="other">You can only select %1$d media items, can\'t use camera.</item>
    </plurals>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_home">Home</string>
    <string name="cart">Cart</string>
    <string name="change_pass">Change Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="recover_pass">Continue</string>
    <string name="new_pass">New Password</string>
    <string name="msg_reset_pass_success">Your password reset successfully, please login with your password.</string>
    <string name="title_category">Category</string>
    <string name="title_fav">Wish List</string>
    <string name="title_cart">Cart</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="via">Via\u0020</string>
    <string name="cod">C.O.D.</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="shop_by_seller">Shop by Seller</string>
    <string name="search">Search</string>
    <string name="no_category_found">No Category Found</string>
    <string name="no_seller_found">No Seller Found</string>
    <string name="view_all">View All</string>
    <string name="welcome">Welcome to </string>
    <string name="password_">Password</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="mobile_send_msg">We will send you an OTP on mobile number to verify. </string>
    <string name="please_type_verification_code_sent_to">Please Enter OTP sent via SMS on</string>
    <string name="personal_info">Personal Info</string>
    <string name="not_registered">Sign up</string>
    <string name="login">Log in</string>
    <string name="forgot_text">Forgot password ?</string>
    <string name="forgot_message_hint">Registered mobile number</string>
    <string name="old_pass">Old Password </string>
    <string name="reset_pass_text">Reset Your Password</string>
    <string name="change_password">Change Password ?</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="confirm_order_amt">Confirm Order Amount</string>
    <string name="profile">Profile</string>
    <string name="refer_">Referral Code (optional)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No</string>
    <string name="alternate_mobile">Alternate Mobile No</string>
    <string name="select_city">Select City</string>
    <string name="select">Select</string>
    <string name="city_name">City Name</string>
    <string name="select_area">Select Area</string>
    <string name="address">Address</string>
    <string name="addresses">Addresses</string>
    <string name="pincode">PinCode</string>
    <string name="pincode_not_found">PinCode not found, try again!</string>
    <string name="is_login">Welcome Guest</string>
    <string name="is_mobile">Login / Register</string>
    <string name="next">NEXT</string>
    <string name="otp">Enter OTP</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="fav_text">Wish List</string>
    <string name="share_text">Share</string>
    <string name="similar_product">Similar Products</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="msg_no_result">Sorry, no results found</string>
    <string name="msg_search_again">Please check the spelling or try a different word</string>
    <string name="limit_alert">Apologies, max product quantity limit reached.</string>
    <string name="delete_product_message">Are you sure, you want to remove this product from cart ?</string>
    <string name="delete_address_msg">Are you sure, you want to remove this address?</string>
    <string name="delete_product_title">Remove Product</string>
    <string name="delete_address">Remove Address</string>
    <string name="stock_limit">Oops! Limited stock available. </string>
    <string name="total_amt">Subtotal</string>
    <string name="items">\u0020Items</string>
    <string name="item">\u0020Item</string>
    <string name="item_amount">Item Amount :</string>
    <string name="promo_applied">PromoCode Discount :</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="delivery_charge1">Delivery Charge :</string>
    <string name="free">Free</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="checkout">Checkout</string>
    <string name="update_location">Update Your Location</string>
    <string name="payment">Payment</string>
    <string name="current_location">Current Location</string>
    <string name="order_list">Order Summary</string>
    <string name="your_order">Your Order</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="promo_code_msg">Have a Promo Code?</string>
    <string name="apply">Apply</string>
    <string name="no_item_in_cart">Your cart is empty</string>
    <string name="no_items_in_cart_msg">You have no items in your shopping cart.\nLets\'s go buy something!</string>
    <string name="shop_now">Shop Now</string>
    <string name="filter_by">Filter By</string>
    <string name="change_layout">Change Layout</string>
    <string name="payment_method">Payment Method</string>
    <string name="cod_pay">Cash On Delivery</string>
    <string name="pay_u_pay">PayU Money</string>
    <string name="paypal_pay">PayPal</string>
    <string name="paystack">Paystack</string>
    <string name="razor_payment">RazorPay</string>
    <string name="pay_u">PayUMoney</string>
    <string name="paypal">PayPal</string>
    <string name="resend">Resend OTP</string>
    <string name="verify_message">Verify your registered number and reset your password. </string>
    <string name="alert_not_register_num1">Mobile number is not registered on </string>
    <string name="alert_not_register_num2">. Please register to continue. Return to Log In screen and select Sign Up.</string>
    <string name="alert_register_num1">Mobile number already registered with </string>
    <string name="alert_register_num2">. You can sign into account using your credentials.</string>
    <string name="reset_alert_msg">Are you sure, you want to reset password?\nAfter changed password session will be logout.</string>
    <string name="verify_your_mobile">Verify Your Mobile Number</string>
    <string name="order_placed1">Order Placed!!</string>
    <string name="order_error">Error while payment!!</string>
    <string name="order_cancel">Cancel payment!!</string>
    <string name="wallet_recharged">Wallet Recharged!!</string>
    <string name="cancel_item">Cancel Item</string>
    <string name="return_order">Return Item</string>
    <string name="quantity_tracking">Qty:</string>
    <string name="view_details">View Details</string>
    <string name="order_placed">Order\nPlaced</string>
    <string name="processed">Order\nProcessed</string>
    <string name="shipped">Order\nShipped</string>
    <string name="delivered">Order\nDelivered</string>
    <string name="all">All</string>
    <string name="sold_out">Out of stock</string>
    <string name="check_pincode">Check Pincode</string>
    <string name="enter_an_pincode">Enter an Pincode</string>
    <string name="default_delivery_location">Default Delivery Location</string>
    <string name="msg_default_delivery_location">By selecting location only deliverable product will shows according to selected location.</string>
    <string name="search_pin_code">Search Pin Code</string>
</resources>