<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:background="@drawable/login_curve"
    android:orientation="vertical"
    android:padding="@dimen/dimen_30dp">

    <ImageView
        android:id="@+id/imgPincodeClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/check_pincode"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:hint="@string/enter_an_pincode">

        <EditText
            android:id="@+id/edtPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableStart="@drawable/ic_area"
            android:drawablePadding="@dimen/dimen_10dp"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:ignore="LabelFor"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/gray" />


    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/card_shadow"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/_10sdp"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>